##########################
# Setup.py Configuration #
##########################
[metadata]
name = PykeenMLFlowWrapper
version = 0.1.0-dev
description = Building and exporting of Rare Diseases Database 
long_description = file: README.md

url = https://github.com/Rodrigo-A-Pereira/PykeenMLFlowWrapper
#download_url = https://github.com/pyPykeenMLFlowWrapperbel/PykeenMLFlowWrapper/releases

project_urls =
    Bug Tracker = https://github.com/Rodrigo-A-Pereira/PykeenMLFlowWrapper/issues
    Source Code = https://github.com/Rodrigo-A-Pereira/PykeenMLFlowWrapper


author = Rodrigo Pereira
author_email = rodrigo.pereira@ua.pt
maintainer = Rodrigo Pereira
maintainer_email = rodrigo.pereira@ua.pt

license = MIT
license_file = LICENSE

classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering


keywords =
    KGE
    MLFlow
    Wrapper


[options]
install_requires =
    pykeen
    mlflow


zip_safe = false
include_package_data = True
python_requires = >=3.5

packages = find:
package_dir =
    = src

[options.packages.find]
where = src